add kafka+cassandra+quarkus for event streaming demo